# push-chain-gateway-contracts

./: .gitmodules  CLAUDE.md  Gateway_DIFF_ANALYSIS.md  INTEGRATION_GUIDE.md  README.md
contracts/evm-gateway/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  coverage.lcov  foundry.toml  lcov.info
contracts/evm-gateway/config/: chainConfig.json
contracts/evm-gateway/docs/: 1_PUSH_CHAIN.md  2_UniversalGateway.md  3_UniversalGatewayPC.md  4_OutboundTx_Flows.md  5_InboundTx_Flows.md  ADDRESSES.md  CEA_VAULT_ANALYSIS.md  CEA_VAULT_PLAN.md  EVM_Gateway_Upgrade_Plan.md  PC20_Research_Doc.md  Revert_Handling.md  SECURITY_ANALYSIS_v1.md  TESTNET_UPGRADE_PLAN.md  THREAT_MODELLING_DOC.md
contracts/evm-gateway/script/: 1_DeployGatewayWithProxy.sol  2_DeployGatewayImpl.sol  3_UpgradeGatewayNewImpl.sol  4_DeployVaultWithProxy.sol  5_UpgradeVaultNewImpl.sol  DeployCommands.md
contracts/svm-gateway/: .gitignore  Anchor.toml  INTEGRATION_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  evmflow.md  package.json  svmflow.md  tsconfig.json
contracts/svm-gateway/programs/universal-gateway/: Cargo.toml
contracts/svm-gateway/programs/universal-gateway/src/: errors.rs  lib.rs  state.rs  utils.rs
contracts/svm-gateway/programs/universal-gateway/src/instructions/: admin.rs  deposit.rs  execute.rs  legacy.rs  mod.rs  rescue.rs  revert.rs  tss.rs  withdraw.rs  withdrawAndExecute.rs  withdraw_execute.rs
contracts/svm-gateway/programs/universal-gateway/src/utils/: encoding.rs  mod.rs  pricing.rs  rate_limit.rs  transfers.rs  validation.rs
contracts/tokens/: usdc-token.json
(+371 files in other folders)
